--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "prettier"
   ],
   "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
     "no-restricted-globals":"off",
     "import/no-extraneous-dependencies": "off",
     "array-callback-return": "off",
