--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "csv-parse": "^4.15.4",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "mongodb": "^3.6.7",
     "mongoose": "^5.12.10",
     "multer": "^1.4.2",
