--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "csv-parse": "^4.15.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
