--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "csv-parse": "^4.15.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.7",
     "mongoose": "^5.12.10",
     "multer": "^1.4.2",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/multer": "^1.4.5",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
