--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/multer": "^1.4.5",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
@@ -31,7 +33,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-import-helpers": "^1.1.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
     "prettier": "^2.3.0",
+    "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   }
