--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^5.12.10",
     "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.5.0"
+    "tsyringe": "^4.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
