--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "csv-parse": "^4.15.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -21,6 +22,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.11",
     "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "^8.5.5",
