--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "csv-parse": "^4.15.4",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
